# NEVRETEM-DER

./: .gitignore  CMakeLists.txt  DEPLOYMENT_GUIDE.md  LICENSE.txt  README.md  RELEASE_GUIDE.md  build.bat  config.example.ini  create_installer.nsi  deploy_windows.bat  fix_mingw_dlls.bat  run.bat  update_version.bat
.github/workflows/: release.yml
resources/: style.qss
src/: firebaseauthservice.cpp  firebaseauthservice.h  firebasestorageservice.cpp  firebasestorageservice.h  firestoreservice.cpp  firestoreservice.h  logindialog.cpp  logindialog.h  main.cpp  mainwindow.cpp  mainwindow.h  statisticsdialog.cpp  statisticsdialog.h  student.cpp  student.h  studentdialog.cpp  studentdialog.h  thememanager.cpp  thememanager.h  universities.json  updatechecker.cpp  updatechecker.h  updatedialog.cpp  updatedialog.h  updatedownloader.cpp  updatedownloader.h  updateinstaller.cpp  updateinstaller.h
